versions/v2.9/modules/en/pages/faq/deprecated-features.adoc
= Deprecated Features in {rancher-product-name}
:page-languages: [en, zh]
:revdate: 2026-01-16
:page-revdate: {revdate}
:community-path: faq/deprecated-features.adoc 
:product-path: faq/deprecated-features.adoc

== What is Rancher's deprecation policy?

The official deprecation policy is documented in the https://www.suse.com/support/rancher-prime/#Rancher-Prime-Deprecation-Policy[Rancher Prime Deprecation Policy].

== Where can I find out which features have been deprecated in Rancher?

Rancher will publish deprecated features as part of the https://github.com/rancher/rancher/releases[release notes] for Rancher found on GitHub. Please consult the following patch releases for deprecated features:

|===
| Patch Version | Release Date

| https://github.com/rancher/rancher/releases/tag/v2.9.12[2.9.12]
| Sep 25, 2025

| https://github.com/rancher/rancher/releases/tag/v2.9.11[2.9.11]
| Aug 27, 2025

| https://github.com/rancher/rancher/releases/tag/v2.9.10[2.9.10]
| May 22, 2025

| https://github.com/rancher/rancher/releases/tag/v2.9.9[2.9.9]
| Apr 24, 2025

| https://github.com/rancher/rancher/releases/tag/v2.9.8[2.9.8]
| Mar 31, 2025

| https://github.com/rancher/rancher/releases/tag/v2.9.7[2.9.7]
| Feb 27, 2025

| https://github.com/rancher/rancher/releases/tag/v2.9.6[2.9.6]
| Jan 29, 2025

| https://github.com/rancher/rancher/releases/tag/v2.9.5[2.9.5]
| Dec 19, 2024

| https://github.com/rancher/rancher/releases/tag/v2.9.4[2.9.4]
| Nov 18, 2024

| https://github.com/rancher/rancher/releases/tag/v2.9.3[2.9.3]
| Oct 24, 2024

| https://github.com/rancher/rancher/releases/tag/v2.9.2[2.9.2]
| Sep 19, 2024

| https://github.com/rancher/rancher/releases/tag/v2.9.1[2.9.1]
| Aug 26, 2024

| https://github.com/rancher/rancher/releases/tag/v2.9.0[2.9.0]
| Jul 31, 2024
|===

== What can I expect when a feature is marked for deprecation?

In the release where functionality is marked as "Deprecated", it will still be available and supported allowing upgrades to follow the usual procedure. Once upgraded, users/admins should start planning to move away from the deprecated functionality before upgrading to the release it marked as removed. The recommendation for new deployments is to not use the deprecated feature.
