versions/v2.11/modules/en/pages/faq/deprecated-features.adoc
= Deprecated Features in {rancher-product-name}
:page-languages: [en, zh]
:revdate: 2026-09-23
:page-revdate: {revdate}
:page-community-path: faq/deprecated-features.adoc 
:page-product-path: faq/deprecated-features.adoc

== What is Rancher's deprecation policy?

The official deprecation policy is documented in the https://www.suse.com/support/rancher-prime/#Rancher-Prime-Deprecation-Policy[Rancher Prime Deprecation Policy].

== Where can I find out which features have been deprecated in Rancher?

Rancher will publish deprecated features as part of the https://github.com/rancher/rancher/releases[release notes] for Rancher found on GitHub. Please consult the following patch releases for deprecated features:

|===
| Patch Version | Release Date

// DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT.
| https://github.com/rancher/rancher/releases/tag/v2.11.18[2.11.18]
| 2026-09-23

| https://github.com/rancher/rancher/releases/tag/v2.11.17[2.11.17]
| 2026-08-26

| https://github.com/rancher/rancher/releases/tag/v2.11.16[2.11.16]
| 2026-07-30

| https://github.com/rancher/rancher/releases/tag/v2.11.15[2.11.15]
| 2026-06-29

| https://github.com/rancher/rancher/releases/tag/v2.11.14[2.11.14]
| May 27, 2026

| https://github.com/rancher/rancher/releases/tag/v2.11.13[2.11.13]
| Apr 30, 2026

| https://github.com/rancher/rancher/releases/tag/v2.11.12[2.11.12]
| Mar 25, 2026

| https://github.com/rancher/rancher/releases/tag/v2.11.11[2.11.11]
| Feb 25, 2026

| https://github.com/rancher/rancher/releases/tag/v2.11.10[2.11.10]
| Jan 29, 2026

| https://github.com/rancher/rancher/releases/tag/v2.11.9[2.11.9]
| Dec 18, 2025

| https://github.com/rancher/rancher/releases/tag/v2.11.8[2.11.8]
| November 24, 2025

| https://github.com/rancher/rancher/releases/tag/v2.11.7[2.11.7]
| October 23, 2025

| https://github.com/rancher/rancher/releases/tag/v2.11.6[2.11.6]
| September 25, 2025

| https://github.com/rancher/rancher/releases/tag/v2.11.5[2.11.5]
| August 28, 2025

| https://github.com/rancher/rancher/releases/tag/v2.11.4[2.11.4]
| July 30, 2025

| https://github.com/rancher/rancher/releases/tag/v2.11.3[2.11.3]
| June 25, 2025

| https://github.com/rancher/rancher/releases/tag/v2.11.2[2.11.2]
| May 22, 2025

| https://github.com/rancher/rancher/releases/tag/v2.11.1[2.11.1]
| Apr 24, 2025

| https://github.com/rancher/rancher/releases/tag/v2.11.0[2.11.0]
| Mar 31, 2025
|===

== What can I expect when a feature is marked for deprecation?

In the release where functionality is marked as "Deprecated", it will still be available and supported allowing upgrades to follow the usual procedure. Once upgraded, users/admins should start planning to move away from the deprecated functionality before upgrading to the release it marked as removed. The recommendation for new deployments is to not use the deprecated feature.
